<resources>
    <string name="app_name">Sprint Final</string>
    <string name="profile_image">"perfil"</string>
    <string name="descripcion_perfil">Hola soy Judith Vergara Muñoz, Ingeniera en Alimentos e Ingeniero Civil Industrial, soy Chilena</string>
    <string name="experiencia">Años de experiencia</string>
    <string name="anios">4</string>
    <string name="area">Área de experiencia</string>
    <string name="recursos_humanos">Recursos Humanos</string>
    <string name="nivel_motivacional">Nivel motivacional</string>
    <string name="altamente_comprometida">Altamente comprometida</string>
    <string name="habilidad_profesional">Habilidad profesional</string>
    <string name="aprendizaje_activo">Aprendizaje activo</string>
    <string name="informacion_contacto">Información contacto</string>
    <string name="informacion_de_contacto">Información de Contacto</string>
    <string name="linkedin">LinkedIn</string>
    <string name="salir">Salir</string>
    <string name="enviar_mensaje">Enviar Mensaje</string>
    <string name="agregue_un_mensaje">Agregue un mensaje</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="info_contacto">Información de contacto</string>
    <string name="nuevo_mensaje">"Envie un email "</string>
    <string name="email">Enviar correo</string>
    <string name="enviar_un_correo">Enviar un  correo</string>
</resources>