<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Título -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informacion_de_contacto"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:paddingBottom="16dp"
        android:layout_marginTop="16dp"/>

    <!-- Logo LinkedIn -->
    <ImageView
        android:id="@+id/linkedin_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/linkedin" />

    <Button
        android:id="@+id/linkedin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/linkedin_logo"
        android:layout_marginStart="67dp"
        android:layout_marginBottom="32dp"
        android:layout_toEndOf="@id/linkedin_logo"
        android:text="@string/linkedin"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="#800080"
        android:backgroundTintMode="src_atop"
        android:stateListAnimator="@null"
        android:background="@drawable/button_background"/>

    <!-- Logo Whatsapp -->
    <ImageView
        android:id="@+id/whatsapp_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/linkedin_logo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/whatsapp" />

    <Button
        android:id="@+id/whatsapp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/whatsapp_logo"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="13dp"
        android:layout_toEndOf="@id/whatsapp_logo"
        android:background="@drawable/button_background"
        android:backgroundTint="#800080"
        android:backgroundTintMode="src_atop"
        android:stateListAnimator="@null"
        android:text="@string/whatsapp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Label for Send Email -->
    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar_un_correo"
        android:textSize="20sp"
        android:layout_below="@id/whatsapp_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:paddingBottom="8dp"/>

    <!-- Divider Line -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black"
        android:layout_below="@id/email_label"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"/>

    <!-- Logo Gmail -->
    <ImageView
        android:id="@+id/gmail_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/email_label"
        android:layout_alignParentStart="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/gmail" />

    <!-- Button Email -->
    <Button
        android:id="@+id/email_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/gmail_logo"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="13dp"
        android:layout_toEndOf="@id/gmail_logo"
        android:background="@drawable/button_background"
        android:backgroundTint="#800080"
        android:backgroundTintMode="src_atop"
        android:stateListAnimator="@null"
        android:text="@string/email"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Botón Salir -->
    <Button
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_button"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FF0000"
        android:backgroundTintMode="src_atop"
        android:stateListAnimator="@null"
        android:text="@string/salir"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>